# 1-3

./: LICENSE  README.md  drafts.py  esg.db  main.py  pyproject.toml  requirements.txt  vectors.index  vectors.index.meta.pkl  제목 없는 다이어그램.drawio
UI/vue-project/: package-lock.json  package.json
UI/vue-project/src/: App.vue  data.js
UI/vue-project/src/assets/styles/: App.css
UI/vue-project/src/components/: EmissionsLineChart.vue  ScopePieChart.vue
api/: documents.py
app/: db.py  main.py
app/api/: documents.py  documents_api.py  mapping.py  search.py
app/core/: bm25_utils.py  chunking.py  embeddings.py  parsing.py  settings.py  vectorstore_faiss.py
app/models/: db_models.py
app/services/: chunk_service.py  document_service.py  embedding_service.py
app/specs/: csrd.json
app/storage/: bm25.pkl  docs.pkl  vectors.index
app/storage/faiss_index/: index.faiss  index.pkl
app/uploads/: db0d1223-f5d9-49c7-8709-cd967edc78df_sample_esg.docx
core/: chunking.py  embeddings.py  parsing.py  vectorstore_faiss.py
data/vector_store/: index.faiss  index.pkl
specs/: k_esg.json
